Stretch based build now works similarly
to the old httpd image based, except the cgi-bin script which doesn't run.

--- a/build-contracts/docker-compose.yml
+++ b/build-contracts/docker-compose.yml
@@ -45,7 +45,7 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./html-ajax:/usr/local/apache2/htdocs
+      - ./html-ajax:/var/www/html
   keycloak-setup:
     build: ./keycloak-setup
     links:
