--- a/build-contracts/openidc/000-default.conf
+++ b/build-contracts/openidc/000-default.conf
@@ -1,6 +1,6 @@
 <VirtualHost *:80>
 	ServerAdmin webmaster@localhost
-	DocumentRoot htdocs/
+	DocumentRoot /var/www/html
 
 	ErrorLog /proc/self/fd/1
 	CustomLog /proc/self/fd/2 combined
