--- a/build-contracts/openidc/000-default.conf
+++ b/build-contracts/openidc/000-default.conf
@@ -30,6 +30,9 @@
 
 	OIDCInfoHook userinfo
 
+	OIDCCacheType redis
+	OIDCRedisCacheServer redis
+
 	# See fast if we accumulate state cookies
 	LimitRequestFieldSize 4096
 
