--- a/build-contracts/docker-compose.yml
+++ b/build-contracts/docker-compose.yml
@@ -40,18 +40,25 @@ services:
     depends_on:
       - httpd-openidc
     links:
-      - keycloak
-      - redis
-    # Don't allow direct communication with keycloak; depends on hosting scenario
-    #links:
+    # Commented out to disallow direct communication with keycloak; depends on hosting scenario
     #  - keycloak
+      - redis
     expose:
       - "80"
-    # For local browser; you also need "openidc" in your hosts file
     ports:
       - "80:80"
     command:
       - -DLOGLEVEL=info
+    volumes:
+      - ./html-ajax:/usr/local/apache2/htdocs
+  openidc2:
+    build: ./openidc
+    depends_on:
+      - httpd-openidc
+    links:
+      - redis
+    ports:
+      - "2080:80"
     volumes:
       - ./html-ajax:/usr/local/apache2/htdocs
   keycloak-setup:
