Demonstrates that cache is effective: disable redis in conf to get an error on 2080

--- a/build-contracts/docker-compose.yml
+++ b/build-contracts/docker-compose.yml
@@ -61,6 +61,16 @@ services:
       - "2080:80"
     volumes:
       - ./html-ajax:/usr/local/apache2/htdocs
+    entrypoint:
+      - /bin/bash
+      - -ce
+      - >
+        sed -i 's|http://openidc/|http://openidc:2080/|' conf/000-default.conf;
+        echo "This instance will test cache sharing when auth happened at the first instance and this one can't reach keycloak";
+        sed -i 's|http://keycloak:8080/|http://keycloak-access-not-allowed-from-instance-2:8080/|' conf/000-default.conf;
+        sed -i "s|ServerName openidc|ServerName openidc\n  ErrorDocument 500 '500: expected if instance 2 sees no session cache, or tries to revalidate'|" conf/000-default.conf;
+        cat conf/000-default.conf | grep 'http://';
+        httpd -DFOREGROUND -DLOGLEVEL=debug
   keycloak-setup:
     build: ./keycloak-setup
     links:
