--- a/build-contracts/openidc/000-default.conf
+++ b/build-contracts/openidc/000-default.conf
@@ -38,7 +38,8 @@
 
 	Header setifempty Cache-Control "max-age=0, must-revalidate"
 
-	RedirectTemp /logout http://openidc/protected/redirect_uri?logout=http%3A%2F%2Fopenidc%2F%3Fwe-have-no-loggedout-page-yet
+	OIDCDefaultLoggedOutURL http://openidc/we-have-no-loggedout-page-yet
+	RedirectTemp /logout http://openidc/protected/redirect_uri?logout
 
 	<Location /protected>
 		AuthType openid-connect
